Samme bredde på versjon som oppsummering, sentrerer bedre

--- a/src/komponenter/modal/VersjonModal.less
+++ b/src/komponenter/modal/VersjonModal.less
@@ -3,11 +3,9 @@
 .versjon {
     &__modal {
         width: 90%;
-        padding: 2rem 1.5rem 4rem 1.5rem;
+        padding: 2rem 2.5rem;
         @media (min-width: @screen-sm-min) {
-            padding: 2rem 3rem 4rem 3rem;
-            width: 80%;
-            max-width: unset;
+            max-width: 42rem;
         }
     }
 }
