--- a/src/AvtaleSide/Stegmeny/Stegmeny.less
+++ b/src/AvtaleSide/Stegmeny/Stegmeny.less
@@ -3,6 +3,7 @@
     flex-direction: column;
     position: sticky;
     top: 0;
+    margin-right: 1rem;
 
     @media print {
         display: none;
