--- a/src/AvtaleSide/steg/VarighetSteg/Datovelger/datovelger.less
+++ b/src/AvtaleSide/steg/VarighetSteg/Datovelger/datovelger.less
@@ -172,15 +172,10 @@
     color: @white;
 }
 
-.datovelger_DayPicker:focus {
-    outline: 0;
-    box-shadow: 0 0 0 3px @navOransjeLighten40;
-}
-
 .datovelger {
+    width: 140px;
+    margin-bottom: 1rem;
     position: relative;
-    width: 100%;
-    margin: auto;
     font-family: 'Source Sans Pro', Arial, sans-serif;
     font-size: 1rem;
     line-height: 1.375rem;
@@ -222,23 +217,64 @@
         width: max-content;
     }
 
+    &__DayPicker:focus {
+        outline: 0;
+        box-shadow: 0 0 0 3px @navOransjeLighten40;
+    }
+
+    &-input {
+        width: 140px;
+    }
+
     &__inner {
-        display: inline-block;
-        width: 100%;
+        width: auto;
+    }
+
+    &__DayPicker {
+        display: block;
+        position: absolute;
+        top: 2.5em;
+        border-radius: @border-radius-small;
+        background-color: @white;
+        border: 1px solid @grayIcon;
+        z-index: 101;
     }
 
     &__inputContainer {
         display: flex;
+        position: relative;
         margin-bottom: 0;
-        width: 100%;
+        width: auto;
+        min-width: 8.5rem;
     }
 
     &__toggleDayPicker {
-        display: none;
-    }
+        display: block;
+        top: 0;
+        right: 2px;
+        text-indent: -9999px;
+        width: 2rem;
+        height: 100%;
+        border: 0;
+        border-left: 1px solid @grayIcon;
+        padding: 0;
+        position: absolute;
+        background: transparent data-uri('kalender.svg') no-repeat center center;
+        background-size: 16px 16px;
 
-    &__DayPicker {
-        display: none;
+        &:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px @orangeFocus;
+        }
+
+        &:hover:not(:disabled),
+        &:focus {
+            background-image: data-uri('kalender--hover.svg');
+        }
+
+        &:active {
+            background-image: data-uri('kalender--aktiv.svg');
+        }
     }
 }
 
@@ -249,66 +285,5 @@
 
     .skjemaelement__feilmelding {
         margin-top: 0;
-    }
-}
-
-@media (min-width: @screen-sm-min) {
-    .datovelger {
-        margin: auto;
-        width: 15rem;
-
-        &-input {
-            width: 15rem;
-        }
-
-        &__inner {
-            width: auto;
-        }
-
-        &__DayPicker {
-            display: block;
-            position: absolute;
-            top: 2.5em;
-            border-radius: @border-radius-small;
-            background-color: @white;
-            border: 1px solid @grayIcon;
-            z-index: 101;
-        }
-
-        &__inputContainer {
-            position: relative;
-            margin-bottom: 0;
-            width: auto;
-            min-width: 8.5rem;
-        }
-
-        &__toggleDayPicker {
-            display: block;
-            top: 0;
-            right: 2px;
-            text-indent: -9999px;
-            width: 2rem;
-            height: 100%;
-            border: 0;
-            border-left: 1px solid @grayIcon;
-            padding: 0;
-            position: absolute;
-            background: transparent data-uri('kalender.svg') no-repeat center center;
-            background-size: 16px 16px;
-
-            &:focus {
-                outline: none;
-                box-shadow: 0 0 0 3px @orangeFocus;
-            }
-
-            &:hover:not(:disabled),
-            &:focus {
-                background-image: data-uri('kalender--hover.svg');
-            }
-
-            &:active {
-                background-image: data-uri('kalender--aktiv.svg');
-            }
-        }
     }
 }
