Lagt til sokeboks for veileder

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -125,4 +125,27 @@
         align-items: center;
         height: 20rem;
     }
+
+    &__sokeboks {
+        width: 20rem;
+    }
+    &__sokelinje {
+        display: flex;
+        align-items: baseline;
+    }
+    &__sokefelt {
+        margin-right: 0.5rem;
+    }
+    &__sokeradio {
+        display: flex;
+        margin-top: 1rem;
+    }
+    &__deltakerradio {
+        margin-right: 1rem;
+    }
+
+    &__innhold {
+        display: flex;
+        justify-content: space-between;
+    }
 }
