Fikset ubrukt kode++ etter review

--- a/src/AvtaleOversikt/AvtalekortMobil.less
+++ b/src/AvtaleOversikt/AvtalekortMobil.less
@@ -22,10 +22,6 @@
         width: 1rem;
     }
 
-    &__uthevet {
-        font-weight: bold;
-    }
-
     &__status {
         margin-top: 1rem;
         display: flex;
@@ -34,9 +30,11 @@
     &__statustekst {
         margin-left: 0.5rem;
     }
+
+    &__a {
+        color: black;
+        text-decoration: none;
+    }
 }
 
-a {
-    color: black;
-    text-decoration: none;
-}
+
