--- a/src/AvtaleOversikt/SokEtterAvtaler/SokEtterAvtaler.less
+++ b/src/AvtaleOversikt/SokEtterAvtaler/SokEtterAvtaler.less
@@ -1,9 +1,14 @@
 @import '~nav-frontend-core/less/_variabler';
 .soketteravtaler {
     &__sokeboks {
-        width: 20rem;
+        padding: 2rem;
+        // width: 20rem;
         height: 16rem;
-        margin-top: 3.3rem;
+        margin-top: 3.2rem;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+        flex-shrink: 0;
+        margin: 4.2rem 1rem 1rem 1rem;
     }
     &__sokelinje {
         display: flex;
