Lagt til mer eksplisitt typesetting

--- a/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
+++ b/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
@@ -35,6 +35,14 @@
         width: 7rem;
     }
 
+    &__statusikon {
+        padding-right: 1rem;
+    }
+
+    &__status {
+        width: 11rem;
+    }
+
     &__skeletonrader {
         max-width: 900px;
         display: flex;
