--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin: 0 auto;
     padding: 1rem;
-    //max-width: @screen-md;
+    max-width: 55rem;
 
     &__eksterntLenkeikon {
         display: inline-block;
@@ -37,6 +37,7 @@
     &__ingen-avtaler-header {
         margin-top: 2rem;
         margin-bottom: 1rem;
+        text-align: center;
     }
 
     &__ingen_avtaler {
@@ -117,15 +118,15 @@
     }
 
     &__status {
-        width: 9rem;
+        width: 11rem;
     }
 
-    &__spinner {
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
-        // height: 20rem;
-    }
+    // &__spinner {
+    //     // display: flex;
+    //     // justify-content: center;
+    //     // align-items: center;
+    //     // height: 20rem;
+    // }
 
     &__sokeboks {
         width: 20rem;
@@ -167,5 +168,20 @@
 
     &__avtaleliste {
         margin: 1rem;
+        //width: 908px;
+    }
+
+    &__avtaleliste2 {
+        min-width: 100%;
+    }
+
+    &__ingenavtalerveileder {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        justify-content: center;
+        align-items: center;
+        height: 16rem;
+        margin: 4.2rem 1rem 1rem 1rem;
     }
 }
