bytte mellom ikon og status for andre partner

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -37,11 +37,12 @@
         justify-content: space-between;
 
         &__ikon {
-            margin-left: 2rem;
+            margin-right: 0.5rem;
         }
         &__begge {
             display: flex;
             margin-right: 1rem;
+            align-items: center;
         }
     }
 }
