--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
@@ -8,4 +8,14 @@
     &__headerTekst {
         margin-bottom: 3rem;
     }
+
+    &__ingenavtalerveileder {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        justify-content: center;
+        align-items: center;
+        height: 16rem;
+        margin: 4.2rem 1rem 1rem 1rem;
+    }
 }
