bruk av grid isteden for margin

--- a/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
@@ -18,7 +18,12 @@
             border-bottom: none;
         }
     }
-
+    &__column {
+        &__siste {
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
     &__tittel {
         display: flex;
         align-items: center;
