--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -10,7 +10,6 @@
     &__hovedIkon {
         display: flex;
         justify-content: center;
-        margin-top: -3.5rem;
 
         &__justerStorrelse {
             width: 3.125rem;
@@ -24,10 +23,13 @@
 
     &__header {
         margin-top: 1rem !important;
-        margin-bottom: 1rem;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2rem !important;
     }
 
     &__infotekst {
+        margin-top: 2rem;
         border-bottom: 1px solid #c6c2bf;
     }
 
@@ -50,7 +52,7 @@
     .avtalestatus {
         &__innholdsboks {
             border-bottom: 4px solid #e9e7e7;
-            border-radius: 0;
+            border-radius: 4px;
         }
         &__hovedIkonMobil {
             display: flex;
@@ -65,11 +67,12 @@
 
         &__infotekst {
             border-bottom: 0;
+            border-bottom: 1px solid #c6c2bf;
         }
 
         &__header {
             margin-top: 0rem;
-            margin-bottom: 1rem;
+            margin-bottom: 1rem !important;
             font-size: large;
         }
         &__andreParter {
