--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -1,10 +1,12 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .innloggingsside {
+    max-width: 45rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
-    flex-direction: column;
-    display: flex;
 
     &__lenke {
         margin-top: 2rem;
@@ -12,7 +14,7 @@
 
     &__koffertikon {
         margin-top: 4rem;
-        margin-bottom: 3rem;
+        // margin-bottom: 2.5rem;
     }
 
     @media (min-width: @screen-sm-min) {
@@ -21,6 +23,10 @@
             button {
                 margin: 0rem 0.5rem;
             }
+        }
+
+        &__infotekst {
+            // padding: 0 15rem 0 15rem;
         }
     }
 
