Endret på info-lenke, fikset nytt pabegynt-ikon

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -11,15 +11,14 @@
         margin-left: 0.3rem;
     }
 
-    &__banner {
-        width: 100%;
+    &__lenke {
+        text-decoration-color: black !important;
+        text-decoration-line: none;
+        margin-left: 1rem;
     }
 
-    &__natur-logo {
-        margin: 2.5rem 0 1.5rem 0;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
+    &__banner {
+        width: 100%;
     }
 
     &__ingen-avtaler-tekst-NAV {
@@ -49,7 +48,7 @@
     }
 
     &__opprett-avtale {
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
         display: flex;
         justify-content: center;
     }
@@ -60,8 +59,8 @@
     }
 
     &__informasjonsBanner {
+        width: 100%;
         justify-content: center;
-        margin-bottom: 3rem;
         align-self: center;
     }
 
@@ -126,6 +125,16 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
+        }
+
+        &__informasjonsBanner {
+            margin-top: 1rem;
+            width: 35%;
+            justify-content: center;
+            display: flex;
+            margin-bottom: 1rem;
+            align-self: center;
+            text-align: center;
         }
     }
 
