fjerne utkommenterte kode kode, css bør ryddes opp

--- a/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
@@ -37,7 +37,7 @@
         margin-right: 4rem;
 
         &__sum {
-            margin-right: 3.5rem !important;
+            margin-left: 2.5rem;
 
             &__tittel {
                 margin-left: 2.5rem;
