--- a/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
@@ -8,7 +8,7 @@
         flex-direction: row;
         width: 100%;
         border-bottom: 1px solid @navGra20;
-        padding: 0.5rem 0 0.5rem 0;
+        padding: 0.9rem 0 0.9rem 0;
 
         &__siste {
             border-bottom: 1px solid;
@@ -34,13 +34,11 @@
     }
 
     &__orienter {
-        margin-right: 4rem;
-
         &__sum {
-            margin-left: 2.5rem;
+            //     padding-left: 3rem;
 
             &__tittel {
-                margin-left: 2.5rem;
+                padding-left: 3rem;
             }
         }
     }
@@ -80,10 +78,11 @@
             //margin-right: 4rem;
 
             &__sum {
-                margin-right: 0 !important;
+                //margin-right: 0 !important;
 
                 &__tittel {
-                    margin-left: 2.5rem;
+                    //  margin-left: 2.5rem;
+                    padding-left: 0.5rem;
                 }
             }
         }
