fjerne unødvendige css

--- a/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
@@ -35,8 +35,6 @@
 
     &__orienter {
         &__sum {
-            //     padding-left: 3rem;
-
             &__tittel {
                 padding-left: 3rem;
             }
@@ -50,16 +48,17 @@
     // spesielt til mobil
     @media (max-width: 755px) {
         &__rad {
-            display: flex;
+            /* display: flex;
             justify-content: space-between;
             align-items: center;
 
             flex-direction: row;
             width: 100%;
             border-bottom: 1px solid @navGra20;
-
+*/
             padding: 1rem 0 1rem 0;
             margin: auto;
+
             &__siste {
                 border-bottom: 1px solid;
             }
@@ -86,14 +85,14 @@
                 }
             }
         }
-        &__column {
+        /*  &__column {
             &__siste {
                 display: flex;
                 justify-content: flex-end;
             }
-        }
-        &__orienter__left {
-            margin-left: 0rem;
-        }
+        }*/
+        /* &__orienter__left {
+            margin-left: 0;
+        }*/
     }
 }
