endre ikon visning, hindre varsel og detaljer i status fra utskriving

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -41,6 +41,9 @@
 
     &__varsel {
         margin-top: 1rem;
+        @media print {
+            display: none;
+        }
     }
 
     &__svak {
