--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -11,6 +11,9 @@
         display: flex;
         justify-content: center;
         margin-top: -3.5rem;
+        @media print {
+            display: none;
+        }
 
         &__justerStorrelse {
             width: 3.125rem;
@@ -20,6 +23,9 @@
 
     &__parterIkon {
         margin-bottom: 1rem;
+        @media print {
+            display: none;
+        }
     }
 
     &__header {
@@ -38,11 +44,22 @@
 
         &__ikon {
             margin-right: 0.5rem;
+            @media print {
+                display: none;
+            }
         }
         &__begge {
             display: flex;
             margin-right: 1rem;
             align-items: center;
+            @media print {
+                display: none;
+            }
+        }
+    }
+    @media print {
+        &__noprint {
+            display: none;
         }
     }
 }
@@ -69,7 +86,7 @@
         }
 
         &__header {
-            margin-top: 0rem;
+            margin-top: 0;
             margin-bottom: 1rem;
             font-size: large;
         }
@@ -88,4 +105,10 @@
             }
         }
     }
+    @media print {
+        display: none;
+    }
+}
+@media print {
+    display: none;
 }
