--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -1,5 +1,8 @@
 .beregningTilskuddSteg {
     &__luft {
-        padding: 0.5rem 0 0.5rem 0;
+        padding: 0.5rem 0;
+    }
+    &__lonnogstillingprosent {
+        padding: 1.5rem 0 0.5rem 0;
     }
 }
