--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -72,9 +72,10 @@
 
         &__header {
             margin-top: 0rem;
-            margin-bottom: 1rem !important;
+            margin-bottom: 1rem;
             font-size: large;
         }
+
         &__andreParter {
             margin-top: 2rem;
             display: block;
