--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -5,13 +5,15 @@
 
     &__innholdsboks {
         margin-bottom: 0.5rem;
+        @media print {
+            display: none;
+        }
     }
 
     &__hovedIkon {
         display: flex;
         justify-content: center;
         margin-top: -3.5rem;
-
         &__justerStorrelse {
             width: 3.125rem;
             height: 3.125rem;
@@ -69,7 +71,7 @@
         }
 
         &__header {
-            margin-top: 0rem;
+            margin-top: 0;
             margin-bottom: 1rem;
             font-size: large;
         }
