--- a/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/VisUtregningenPanel.less
@@ -8,7 +8,7 @@
         flex-direction: row;
         width: 100%;
         border-bottom: 1px solid @navGra20;
-        padding: 0.9rem 0 0.9rem 0;
+        padding: 0.9rem 0;
 
         &__siste {
             border-bottom: 1px solid;
