--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -81,6 +81,7 @@
 
             &__ikon {
                 margin-left: 2rem;
+                margin-right: 0;
             }
             &__begge {
                 display: flex;
