--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -15,6 +15,11 @@
         margin-left: 1rem;
     }
 
+    &__luft {
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+
     &__ingen-avtaler-tekst-NAV {
         text-align: center;
         margin-top: 1rem;
@@ -127,21 +132,11 @@
         }
 
         &__informasjonsBanner {
-            display: flex;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-            // width: 35%;
-            align-self: center;
+            margin-top: 5rem;
             text-align: center;
             justify-content: center;
-            position: absolute;
-            bottom: 0;
         }
     }
-
-    // &__avtaleliste {
-    //     margin: 1rem;
-    // }
 
     &__avtalelistecontainer {
         min-width: 100%;
