Forbedret kode etter review

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -25,10 +25,10 @@
     }
 
     &__header {
-        margin-top: 1rem !important;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
         display: flex;
         justify-content: center;
-        margin-bottom: 2rem !important;
     }
 
     &__infotekst {
