--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
@@ -15,7 +15,7 @@
         flex-shrink: 0;
         justify-content: center;
         align-items: center;
-        height: 16rem;
-        margin: 3.1rem 1rem 1rem 1rem;
+        height: 15rem;
+        margin-top: 3.1rem;
     }
 }
