tag-1008-redesign-landingsside-mm (#228)
* Redesign landingsside og justert ikoner for statuser

* Endret på info-lenke, fikset nytt pabegynt-ikon

* Oppdatert ikon

* Tweaks etter review

* Endret ordlyd

* Fikset review + lagt infobanner på bunn i appen

* Fjernet ubrukt import

* Fikset en bug pga npm

* Ryddet i kode etter review og fikset spacing

* Fjernet ubrukt import

* Fix

* Forbedret kode etter review

* css justeringer

* fjernet ubrukt css

Co-authored-by: Sindre Dahl Løken <sindredl@msn.com>

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -11,15 +11,13 @@
         margin-left: 0.3rem;
     }
 
-    &__banner {
-        width: 100%;
+    &__lenke {
+        margin-left: 1rem;
     }
 
-    &__natur-logo {
-        margin: 2.5rem 0 1.5rem 0;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
+    &__luft {
+        margin-left: 2rem;
+        margin-top: 1rem;
     }
 
     &__ingen-avtaler-tekst-NAV {
@@ -49,7 +47,8 @@
     }
 
     &__opprett-avtale {
-        margin-bottom: 3rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
         display: flex;
         justify-content: center;
     }
@@ -60,9 +59,10 @@
     }
 
     &__informasjonsBanner {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        display: flex;
         justify-content: center;
-        margin-bottom: 3rem;
-        align-self: center;
     }
 
     .ulest-varsel-ikon {
@@ -127,10 +127,6 @@
             justify-content: center;
             align-items: flex-start;
         }
-    }
-
-    &__avtaleliste {
-        margin: 1rem;
     }
 
     &__avtalelistecontainer {
