--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -13,7 +13,7 @@
     &__hovedIkon {
         display: flex;
         justify-content: center;
-        margin-top: -3.5rem;
+
         &__justerStorrelse {
             width: 3.125rem;
             height: 3.125rem;
@@ -25,11 +25,14 @@
     }
 
     &__header {
-        margin-top: 1rem !important;
-        margin-bottom: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
     }
 
     &__infotekst {
+        margin-top: 2rem;
         border-bottom: 1px solid #c6c2bf;
     }
 
@@ -53,7 +56,7 @@
     .avtalestatus {
         &__innholdsboks {
             border-bottom: 4px solid #e9e7e7;
-            border-radius: 0;
+            border-radius: 4px;
         }
         &__hovedIkonMobil {
             display: flex;
@@ -68,6 +71,7 @@
 
         &__infotekst {
             border-bottom: 0;
+            border-bottom: 1px solid #c6c2bf;
         }
 
         &__header {
@@ -75,6 +79,7 @@
             margin-bottom: 1rem;
             font-size: large;
         }
+
         &__andreParter {
             margin-top: 2rem;
             display: block;
