--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -1,10 +1,12 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .innloggingsside {
+    max-width: 45rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
-    flex-direction: column;
-    display: flex;
 
     &__lenke {
         margin-top: 2rem;
@@ -12,7 +14,6 @@
 
     &__koffertikon {
         margin-top: 4rem;
-        margin-bottom: 3rem;
     }
 
     @media (min-width: @screen-sm-min) {
