--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -33,7 +33,7 @@
         }
 
         &__varselTekst {
-            text-align: center;
+            padding: 0 1rem;
         }
 
         &__lenkeknapp {
