--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -2,144 +2,9 @@
 .avtaleoversikt {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    padding: 1rem;
-    max-width: 55rem;
+    align-items: center;
 
-    &__eksterntLenkeikon {
-        display: inline-block;
-        margin-left: 0.3rem;
-    }
-
-    &__lenke {
-        margin-left: 1rem;
-    }
-
-    &__luft {
-        margin-left: 2rem;
-        margin-top: 1rem;
-    }
-
-    &__ingen-avtaler-tekst-NAV {
-        text-align: center;
-        margin-top: 1rem;
-    }
-
-    &__ingen-avtaler-tekst {
-        padding: 1rem;
-        > p {
-            margin-bottom: 2rem;
-        }
-    }
-
-    &__ingen-avtaler-header {
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-        text-align: center;
-    }
-
-    &__ingen_avtaler {
-        text-align: center;
-    }
-
-    &__arbeidsgiver-tekst {
-        margin-top: 2rem;
-    }
-
-    &__opprett-avtale {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        display: flex;
-        justify-content: center;
-    }
-
-    &__header {
-        padding: 1rem;
-        font-weight: bold;
-    }
-
-    &__informasjonsBanner {
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        display: flex;
-        justify-content: center;
-    }
-
-    .ulest-varsel-ikon {
-        background-color: #006eed;
-        border: 3px solid @grayBackground;
-        border-radius: 50%;
-        color: #fff;
-        height: 16px;
-        width: 16px;
-        position: absolute;
-        left: -0.45rem;
-    }
-
-    .ulest-varsel-border {
-        display: inline-block;
-        background-clip: border-box;
-        background-image: linear-gradient(#54a3ff, #006eed);
-        border: 2px solid @grayBackground;
-        height: 55px;
-        width: 1rem;
-    }
-
-    .uthevet {
-        font-weight: bold;
-    }
-
-    &__rad {
-        margin: 0 0.25rem;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-wrap: nowrap;
-        width: 95%;
-        position: relative;
-    }
-
-    &__deltakerOgBedrift {
-        width: 14rem;
-        padding-right: 1rem;
-    }
-
-    &__veileder {
-        width: 6rem;
-        padding-right: 1rem;
-    }
-
-    &__opprettet {
-        width: 7rem;
-    }
-
-    &__statusikon {
-        padding-right: 1rem;
-    }
-
-    &__status {
-        width: 11rem;
-    }
-
-    @media (min-width: @screen-md-max) {
-        &__innhold {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-    }
-
-    &__avtalelistecontainer {
-        min-width: 100%;
-    }
-
-    &__ingenavtalerveileder {
-        display: flex;
-        flex-direction: column;
-        flex-shrink: 0;
-        justify-content: center;
-        align-items: center;
-        height: 16rem;
-        margin: 4.2rem 1rem 1rem 1rem;
+    > * {
+        margin-top: 3rem;
     }
 }
