--- a/src/AvtaleOversikt/SokEtterAvtaler/SokEtterAvtaler.less
+++ b/src/AvtaleOversikt/SokEtterAvtaler/SokEtterAvtaler.less
@@ -1,12 +1,5 @@
 @import '~nav-frontend-core/less/_variabler';
 .soketteravtaler {
-    &__sokeboks {
-        padding: 2rem;
-        height: 15rem;
-        flex-shrink: 0;
-        margin: 3.1rem 0rem 2rem 0rem;
-    }
-
     &__sokelinje {
         display: flex;
         align-items: baseline;
@@ -17,7 +10,7 @@
     }
 
     &__sokeradio {
-        display: flex;
+        //display: flex;
         margin-top: 1rem;
     }
 
