satt presidens paa appen in body styling, som overstyrer dekorator styling

--- a/src/index.less
+++ b/src/index.less
@@ -14,7 +14,7 @@
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleOversikt/AvtaleOversikt.less';
 
-body {
+body .tiltaksgjennomforing {
     background-color: @grayBackground;
     font-family: 'Source Sans Pro', Arial, sans-serif;
 }
