Mentor: Opprett avtale (#247)
* Mentor: Opprett avtale

* Mentor: compile error

* Pr. feedback

* Featuretoggle på OpprettAvtale.tsx

* Riktig tittel på mentor-avtale

* Fjernet Avtaleparter fra 'om mentor' steg

* Fjernet noen funksjoner

* fjernet funksjonene som ikke brukes lengre

* Ryddet i imports

Co-authored-by: Sindre Dahl Løken <sindredl@msn.com>

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -71,11 +71,11 @@
     }
 }
 
-@media (min-width: @screen-sm-min) {
+@media (min-width: @screen-md-min) {
     // Desktop
     .opprett-avtale {
         margin: 0 auto;
-        max-width: @screen-sm-min;
+        max-width: @screen-md-min;
 
         .ekspanderbartPanel {
             margin-bottom: 2rem;
