Break ved forskjellige bredder

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -7,4 +7,13 @@
     > * {
         margin-top: 3rem;
     }
+
+    &__filter-og-tabell {
+        display: flex;
+        flex-direction: column;
+
+        @media (min-width: 73rem) {
+            flex-direction: row;
+        }
+    }
 }
