--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
@@ -2,11 +2,7 @@
 
 .ingenAvtaler {
     &__tekst {
-        text-align: center;
-    }
-
-    &__headerTekst {
-        margin-bottom: 3rem;
+        //text-align: center;
     }
 
     &__ingenavtalerveileder {
@@ -15,7 +11,6 @@
         flex-shrink: 0;
         justify-content: center;
         align-items: center;
-        height: 15rem;
-        margin-top: 3.1rem;
+        //height: 15rem;
     }
 }
