--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -1,7 +1,5 @@
 @import '~nav-frontend-core/less/_variabler';
 .avtaletabell {
-    max-width: 55rem;
-
     &__arbeidsgiver-tekst {
         margin-top: 2rem;
     }
@@ -36,31 +34,28 @@
     }
 
     &__rad {
-        margin: 0 0.25rem;
         display: flex;
         justify-content: flex-start;
-        align-items: center;
         flex-wrap: nowrap;
-        width: 95%;
-        position: relative;
+        align-items: center;
     }
 
     &__deltakerOgBedrift {
-        width: 14rem;
-        padding-right: 1rem;
+        width: 12rem;
+        margin-right: 1rem;
     }
 
     &__veileder {
-        width: 6rem;
+        width: 5rem;
         padding-right: 1rem;
     }
 
     &__opprettet {
-        width: 7rem;
+        width: 5.8rem;
     }
 
     &__statusikon {
-        padding-right: 1rem;
+        margin-right: 1rem;
     }
 
     &__status {
