--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
@@ -2,7 +2,7 @@
 
 .ingenAvtaler {
     &__tekst {
-        //text-align: center;
+        text-align: center;
     }
 
     &__ingenavtalerveileder {
@@ -11,6 +11,6 @@
         flex-shrink: 0;
         justify-content: center;
         align-items: center;
-        //height: 15rem;
+        height: 15rem;
     }
 }
