Presser filtrene nedover for aligne med avtaletabellen

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -29,6 +29,7 @@
             aside {
                 width: @filter-bredde;
                 margin-right: @avstand-mellom;
+                margin-top: 3.1rem; // Hack: skal matche høyden på "overskriftsraden" på tabellen
             }
 
             section {
