Border og hvit bakgrunn på tabellheader

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -1,5 +1,9 @@
 @import '~nav-frontend-core/less/_variabler';
 .avtaletabell {
+    .lenkepanel {
+        margin-bottom: 0.5rem;
+    }
+
     &__arbeidsgiver-tekst {
         margin-top: 2rem;
     }
@@ -7,6 +11,10 @@
     &__header {
         padding: 1rem;
         font-weight: bold;
+        background-color: white;
+        border: 1px solid @navGra40;
+        border-radius: 0.25rem;
+        margin-bottom: 1rem;
     }
 
     .ulest-varsel-ikon {
