fjernet duplikat av lonn-tittel

--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -2,7 +2,7 @@
     &__luft {
         padding: 0.5rem 0;
     }
-    &__lonnogstillingprosent {
-        padding: 1.5rem 0 0.5rem 0;
+    &__lonn-tittel {
+        padding-bottom: 0.5rem;
     }
 }
