lagt til styling paa hode-fot meny som retter opp css feil

--- a/src/index.less
+++ b/src/index.less
@@ -13,7 +13,9 @@
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleOversikt/AvtaleOversikt.less';
+@import 'assets/styling/dekorator-override.less';
 
+body,
 body .tiltaksgjennomforing {
     background-color: @grayBackground;
     font-family: 'Source Sans Pro', Arial, sans-serif;
