forandret scoppet paa target container for logg inn knapp stylingen

--- a/src/assets/styling/dekorator-override.less
+++ b/src/assets/styling/dekorator-override.less
@@ -55,7 +55,7 @@
 
 @appresRoot: 'https://appres.nav.no/_public/appressurser/built-appres-v4/';
 
-.hodefot #login-details.hidden + #auth-btns {
+.hodefot .login-container #auth-btns {
     padding-top: 2px;
 }
 
