fikset padding feil paa dekorator logg inn knapp

--- a/src/assets/styling/dekorator-override.less
+++ b/src/assets/styling/dekorator-override.less
@@ -55,8 +55,8 @@
 
 @appresRoot: 'https://appres.nav.no/_public/appressurser/built-appres-v4/';
 
-.hodefot .login-details #auth-btns {
-    padding-top: 3px;
+.hodefot .login-container #auth-btns {
+    padding-top: 2px;
 }
 
 #mainmenu.topnav.container {
