--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -27,6 +27,10 @@
     .tilbaketiloversikt {
         margin-top: 1rem;
         margin-bottom: 1rem;
+        display: flex;
+        > * {
+            margin-right: 1rem;
+        }
     }
 
     .lenkedeling {
