--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -5,4 +5,10 @@
     &__lonn-tittel {
         padding-bottom: 0.5rem;
     }
+
+    &__relasjon-hjelpetekst {
+        border: 1px solid #c6c2bf;
+        border-radius: 3px;
+        padding: 1rem;
+    }
 }
