--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
@@ -2,7 +2,7 @@
 
 .ingenAvtalerArbeidsgiver {
     &__headerIkon {
-        margin-right: 1rem;
+        margin-top: 0.5rem;
     }
 
     &__headerContainer {
