Lagt til sporsmol om familietilknytning Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -11,4 +11,15 @@
         border-radius: 3px;
         padding: 1rem;
     }
+    &__familietilknytning-valg {
+        display: flex;
+
+        label {
+            flex-grow: 1;
+            margin-right: 0.5rem;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
 }
