--- a/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Godkjenning.less
@@ -14,7 +14,11 @@
     }
 
     .bekreftCheckboksPanel {
-        margin: 2rem 0;
+        margin: 1.5rem 0;
+
+        &:not(:last-of-type) {
+            margin-bottom: 0;
+        }
     }
 
     &__lagreKnapp {
