--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -28,6 +28,7 @@
         margin-top: 1rem;
         margin-bottom: 1rem;
         display: flex;
+        justify-content: space-between;
         > * {
             margin-right: 1rem;
         }
