--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -29,9 +29,6 @@
         margin-bottom: 1rem;
         display: flex;
         justify-content: space-between;
-        > * {
-            margin-right: 1rem;
-        }
     }
 
     .lenkedeling {
@@ -80,7 +77,9 @@
         }
         &__avbrytOgDelLenk {
             display: flex;
-            align-items: center;
+            *:not(:last-child) {
+                margin-right: 1rem;
+            }
         }
     }
 }
