--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -16,17 +16,13 @@
         margin-bottom: 1rem;
     }
 
-    .popover__content-inner.lenke {
-        padding: 1rem;
-    }
-
-    .popover__content-inner {
-        padding: 1rem 2rem;
-
-        .lenke {
-            padding-bottom: 1rem;
-            &:not(:last-of-type) {
-                padding-bottom: 1rem;
+    &__meny-wrapper {
+        .popover {
+            &__content-inner {
+                padding: 1.5rem 0.5rem 0.5rem 0.5rem;
+                .lenke {
+                    margin: 1rem;
+                }
             }
         }
     }
@@ -46,16 +42,6 @@
         justify-content: space-between;
         margin-bottom: 1rem;
         margin-top: 1rem;
-
-        .popover__content-inner {
-            padding: 10rem;
-        }
-
-        .popover {
-            &__content-inner {
-                padding: 1rem;
-            }
-        }
     }
 
     .tilbaketiloversikt {
@@ -95,15 +81,20 @@
         justify-content: center;
 
         &__desktop {
+            width: 100%;
+            max-width: 58rem;
             display: flex;
             flex-direction: column;
         }
 
         &__innhold {
-            width: 40rem;
+            max-width: 40rem;
+            width: 100%;
         }
 
         &__container {
+            width: 100%;
+            min-width: 48rem;
             display: flex;
             flex-direction: row;
             justify-content: center;
