Oppdatert oppgavelinje. lagt tilbakeknapp utenfor pop-over menyen
Co-authored-by: Bjarte Tynning <bjarte.tynning@nav.no>

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -17,8 +17,14 @@
     }
 
     &__meny-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
         .popover {
             &__content-inner {
+                display: flex;
+                flex-direction: column;
                 padding: 1.5rem 0.5rem 0.5rem 0.5rem;
                 .lenke {
                     margin: 1rem;
