--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -16,6 +16,32 @@
         margin-bottom: 1rem;
     }
 
+    &__meny-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .popover {
+            &__content-inner {
+                display: flex;
+                flex-direction: column;
+                padding: 1.5rem 0.5rem 0.5rem 0.5rem;
+                .lenke {
+                    margin: 1rem;
+                }
+            }
+        }
+    }
+
+    &__popover-lenke {
+        padding-bottom: 1rem;
+        padding-top: 1rem;
+    }
+
+    &__popover-knapp {
+        margin: 1rem 0 0.5rem 0;
+    }
+
     &__lenkerlinje {
         align-items: center;
         display: flex;
@@ -61,15 +87,20 @@
         justify-content: center;
 
         &__desktop {
+            width: 100%;
+            max-width: 58rem;
             display: flex;
             flex-direction: column;
         }
 
         &__innhold {
-            width: 40rem;
+            max-width: 40rem;
+            width: 100%;
         }
 
         &__container {
+            width: 100%;
+            min-width: 48rem;
             display: flex;
             flex-direction: row;
             justify-content: center;
