Lagt til opprett avtale for arbeidsgiver Co-authored-by: Vegar Sechmann Molvig <vegar.sechmann.molvig@nav.no> Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
@@ -2,47 +2,28 @@
 
 .howto {
     &__icon {
-        flex-grow: 1;
-        display: none;
+        // flex-grow: 1;
+        // display: none;
     }
 
     &__element {
         display: flex;
         margin-bottom: 1.5rem;
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
-        margin-top: 1rem;
-        align-items: flex-start;
+        padding: 1rem;
+        // margin-left: 0.5rem;
+        // margin-right: 0.5rem;
+        // margin-top: 1rem;
+        // align-items: flex-start;
 
-        &:nth-child(0) {
-            flex-grow: 1;
-        }
-        &:nth-child(1) {
-            flex-grow: 5;
-        }
+        // &:nth-child(0) {
+        //     flex-grow: 1;
+        // }
+        // &:nth-child(1) {
+        //     flex-grow: 5;
+        // }
     }
     &__tekst {
         margin-left: 1rem;
-        flex-grow: 5;
-    }
-}
-
-@media (min-width: @screen-sm-min) {
-    .howto {
-        &__icon {
-            flex-grow: 1;
-            display: flex;
-        }
-
-        &__element {
-            display: flex;
-            margin-bottom: 2.5rem;
-            margin-left: 1rem;
-            margin-right: 1rem;
-            margin-top: 1rem;
-        }
-        &__tekst {
-            margin-left: 2rem;
-        }
+        // flex-grow: 5;
     }
 }
