svgo pre-comiit og fix printer ikon

--- a/src/komponenter/SkrivUtKnapp/SkrivUtKnapp.less
+++ b/src/komponenter/SkrivUtKnapp/SkrivUtKnapp.less
@@ -2,7 +2,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     &:hover {
-        #printerSvg {
+        g {
             fill: white;
         }
     }
