Fikser sentry error pa video fullskjerm Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/komponenter/modal/AltinnVideoModal.less
+++ b/src/komponenter/modal/AltinnVideoModal.less
@@ -10,3 +10,8 @@
         justify-content: space-around;
     }
 }
+
+video::-webkit-media-controls-timeline {
+    align-self: center;
+    width: calc(100% - 64px);
+}
