lagt til mer spesifikk melding nar ikke tilgang i valgt bedrift

--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
@@ -2,7 +2,8 @@
 
 .ingenAvtalerArbeidsgiver {
     &__headerIkon {
-        margin-top: 0.5rem;
+        margin-top: 0.2rem;
+        margin-right: 0.5rem;
     }
 
     &__headerContainer {
